# telegram-bot

./: .rustfmt.toml  .travis.yml  CHANGELOG.md  README.md  deploy.sh
lib/: Cargo.toml
lib/_examples/: errors.rs  features.rs  get_me.rs  live_location.rs  pin.rs  simple.rs
lib/examples/: errors.rs  features.rs  get_me.rs  live_location.rs  pin.rs  simple.rs
lib/src/: api.rs  errors.rs  future.rs  lib.rs  macros.rs  prelude.rs  stream.rs
lib/src/connector/: _base.rs  hyper.rs  mod.rs
lib/src/types/: mod.rs  requests.rs
raw/: Cargo.toml
raw/src/: lib.rs  url.rs
raw/src/requests/: answer_callback_query.rs  delete_message.rs  edit_message_caption.rs  edit_message_live_location.rs  edit_message_reply_markup.rs  edit_message_text.rs  export_chat_invite_link.rs  forward_message.rs  get_chat.rs  get_chat_administrators.rs  get_chat_member.rs  get_chat_members_count.rs  get_file.rs  get_me.rs  get_updates.rs  get_user_profile_photos.rs  kick_chat_member.rs  leave_chat.rs  mod.rs  pin_chat_message.rs  restrict_chat_member.rs  send_audio.rs  send_chat_action.rs  send_contact.rs  send_document.rs  send_location.rs  send_message.rs  send_venue.rs  stop_message_live_location.rs  unban_chat_member.rs  unpin_chat_message.rs
raw/src/requests/_base/: _base.rs  errors.rs  http.rs  mod.rs
raw/src/requests/_base/request_types/: detached.rs  json.rs
raw/src/requests/_base/response_types/: json.rs
raw/src/types/: chat.rs  chat_member.rs  message.rs  mod.rs  primitive.rs  refs.rs  reply_markup.rs  response_parameters.rs  update.rs
raw/tests/: update.rs
