[package]
name = "telegram-bot-fork"
version = "0.7.4"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>", "Fedor Gogolev <knsd@knsd.net>", "Emulator000 <emulator@hotmail.it>"]

description = "A library for creating Telegram bots"

documentation = "https://docs.rs/telegram-bot-fork/"
repository = "https://github.com/Emulator000/telegram-bot"
readme = "../README.md"

keywords = ["telegram", "bot", "chat", "api"]
categories = ["api-bindings", "asynchronous"]
license = "MIT"

[dependencies]
antidote = "^1.0"
tokio = "^0.1"
error-chain = "^0.11"
futures = "^0.1"

tokio-timer = "^0.2"

http = "^0.1"

telegram-bot-fork-raw = { version = "=0.7.4", path = "../raw" }

[dependencies.hyper]
version = "^0.12"
optional = true

[dependencies.hyper-tls]
version = "^0.3"
optional = true

[features]
default = ["hyper_connector"]

hyper_connector = ["hyper", "hyper-tls"]
