[package]
name = "telegram-bot-fork-raw"
version = "0.7.6"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>", "Fedor Gogolev <knsd@knsd.net>", "Emulator000 <emulator@hotmail.it>"]

description = "Telegram Bot API types"

documentation = "https://docs.rs/telegram-bot-fork-raw/"
repository = "https://github.com/Emulator000/telegram-bot"
readme = "../README.md"

keywords = ["telegram", "bot", "chat", "api"]
categories = ["api-bindings"]
license = "MIT"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
serde-value = "^0.5"
error-chain = "^0.11"
