[package]
name = "telegram-bot-async-raw"
version = "0.8.2"
authors = [
  "Lukas Kalbertodt <lukas.kalbertodt@gmail.com>",
  "Fedor Gogolev <knsd@knsd.net>",
  "Emulator000 <emulator@hotmail.it>",
  "Łukasz Kurowski <crackcomm@gmail.com>",
]

description = "Telegram Bot API types"

documentation = "https://docs.rs/telegram-bot-async-raw/"
repository = "https://github.com/crackcomm/telegram-bot"
readme = "../README.md"

keywords = ["telegram", "bot", "chat", "api"]
categories = ["api-bindings"]
license = "MIT"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
serde-value = "^0.5"
failure = "^0.1.5"
